fixed header still not responsive

--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,3 @@
-@media screen and (max-width:500px) {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-@media screen and (max-width:500px) {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -214,16 +204,18 @@ img {
 }
 .home .header-section {
   display: flex;
-  background-color: red;
-  width: 60%;
+  align-items: center;
 }
 .home .that-div {
   border-bottom: 1px dashed #C0C0C0;
   justify-content: center;
   flex-direction: column;
-  width: 65%;
   margin: auto;
-  background-color: green;
+  align-items: center;
+  width: 95%;
+}
+.home h2 {
+  padding: 1.8rem;
 }
 .home .content-section {
   margin: 30px 0;
@@ -235,41 +227,45 @@ img {
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
-  color: greenyellow;
 }
 .home .content-section img {
   border-radius: 10px;
 }
-.home .inverse-content {
+.inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
 }
-.home .inverse-content .text-content {
+.inverse-content .text-content {
   padding-left: 1%;
   padding-right: 0;
 }
-.home .inverse-content .img-content {
+.inverse-content .img-content {
   padding-right: 1%;
   padding-left: 0;
 }
-.home .content-destination {
+.content-destination {
   width: 75%;
   margin: 0 auto 30px;
 }
-.home .content-destination img {
+.content-destination img {
   border-radius: 10px;
 }
-.home .content-pick {
+.content-pick {
   padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
 }
-.home .content-pick .destination {
+.content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
 }
-.home .btn {
+@media (max-width:500px) {
+  .content-pick .text-content {
+    background-color: aqua;
+  }
+}
+.btn {
   width: 100%;
   background-color: #17A2B8;
   display: flex;
