--- a/less/variables.less
+++ b/less/variables.less
@@ -12,12 +12,7 @@
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
 
-@mobile: ~"screen and (max-width:500px)";
+@phone: ~"(max-width:500px)";
 
-@media @mobile {
 
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-}
+@tablet: ~"only screen and (min-width: 720px) and (max-width: 959px)";
